--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,3 +13,14 @@ services:
     container_name: tech-harbor-database
     volumes:
       - ./postgres:/var/lib/postgresql/data
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - '3000:3000'
+    env_file:
+      - .env
+    container_name: tech-harbor-service
+    depends_on:
+      - db
